src/objects/Training_Class__c.object
<CustomObject>
    <description>Class is junction between Account and Training Sessions</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account signing up for training</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Classes</relationshipLabel>
        <relationshipName>Training_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case that prompted training class</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Training Classes</relationshipLabel>
        <relationshipName>Training_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Status__c</fullName>
        <description>Date of last status update</description>
        <label>Date of Last Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Session__c</fullName>
        <description>Date session will be held</description>
        <formula>Training_Session__r.Date_of_Session__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <description>initiative class is for</description>
        <formula>TEXT(Training_Session__r.Initiative__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Training session class is attending</description>
        <label>Training Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Training Classes</relationshipLabel>
        <relationshipName>Training_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <description>Custom roll up summary.  Will be set via apex to last entry in rollout step.</description>
        <label>Training Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Training Class</label>
    <nameField>
        <displayFormat>TC-{00000000}</displayFormat>
        <label>Training Class Number</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IC0000000b1DiMAI_00NC0000004zPlmMAE</fullName>
        <active>true</active>
        <field>Training_Attendee__c.Training_Class__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Training_Class__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Training Attendee_Training Class</name>
        <sourceObject>Training_Attendee__c</sourceObject>
    </namedFilters>
    <pluralLabel>Training Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>